<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo22"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LogInActivity"
    android:id="@+id/main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custon_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameEdT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custon_edit_text"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/passwordEdT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custon_edit_text"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btnSingIn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/sing_in"
                android:textSize="22sp"
                app:cornerRadius="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/don_t_have_an_acount"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />


            <Button
                android:id="@+id/btnSingUp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:text="@string/sing_up"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>