<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo22"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LogInActivity"
    android:id="@+id/main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custon_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_registration"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custon_edit_text"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custon_edit_text"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custon_edit_text"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custon_edit_text"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="  Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill,HardcodedText" />

            <TextView
                android:id="@+id/txtPasswordRequirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/password_must_n_be_at_least_6_characters_n_include_a_number_n_include_a_special_character"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp">

                <EditText
                    android:id="@+id/txtSearchUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/user"
                    android:drawableStart="@drawable/person"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/search"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    tools:ignore="ButtonStyle,SmallSp" />
            </LinearLayout>


        </LinearLayout>

        <!-- Botones para CRUD -->

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.1"
            android:backgroundTint="@color/green"
            android:text="@string/create"
            android:textSize="11dp"
            app:cornerRadius="20dp"
            tools:ignore="ButtonStyle,SmallSp,SpUsage,TextSizeCheck" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.1"
            android:backgroundTint="@color/green"
            android:text="@string/update"
            android:textSize="11dp"
            app:cornerRadius="20dp"
            tools:ignore="ButtonStyle,SmallSp,SpUsage,TextSizeCheck" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.1"
            android:backgroundTint="@color/green"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/delete"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            tools:ignore="ButtonStyle,SmallSp" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
