<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="736dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/mancycle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:background="@drawable/custon_edit_text"
        android:src="@drawable/mancycle">

        <!-- Nombre categoría -->
        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_categor_a"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <!-- Rights o tipo -->
        <TextView
            android:id="@+id/textRights"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/textName"
            android:layout_marginTop="4dp"
            android:text="@string/tipo_de_categor_a"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <!-- Descripción -->
        <TextView
            android:id="@+id/textSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textRights"
            android:layout_marginTop="4dp"
            android:text="@string/resumen_de_la_categor_a"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end" />

        <!-- Nueva categoría agregada -->
        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/textSummary"
            android:layout_marginTop="4dp"
            android:text="@string/categor_a_adicional"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

    </RelativeLayout>
</FrameLayout>

